responsive-and-adaptive-layout

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </button>
 
         <ul class="list contacts-list">
-          <li>
+          <li class="contacts-list__item">
             <a
               class="contacts contacts-list__connect"
               href="mailto:info@devstudio.com"
@@ -66,7 +66,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contacts-list__item">
             <a class="contacts contacts-list__connect" href="tel:+380961111111">
               <svg
                 lang="en"
